adds history sharing to zsh shells and fixes tmux.conf's file sourcing to be from .dotfiles dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,4 +149,4 @@ run 'for name in $(printenv | grep -Eo ^tmux_conf_[^=]+); do tmux setenv -gu $na
 #run-shell {{pwd}}/plugins/cpu/cpu.tmux
 #run-shell {{pwd}}/plugins/fix-left-segment.tmux
 
-if-shell "test -f ~/.lightlinetmux.conf" "source-file ~/.lightlinetmux.conf"
+if-shell "test -f ~/.dotfiles/lightlinetmux.conf" "source-file ~/.dotfiles/lightlinetmux.conf"
